force-app/main/default/objects/ICEUser__c/ICEUser__c.object-meta.xml
<CustomObject>
    <description>ICE USER OBJECT
NICC-009421: The ICE Project - (TrackIt 108757)</description>
    <label>ICE User</label>
    <nameField>
        <displayFormat>ICEUSR{000000}</displayFormat>
        <label>ICEUserId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ICE Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>