force-app/main/default/objects/ICEUser__c/fields/ICESubscriptionId__c.field-meta.xml
<CustomField>
    <fullName>ICESubscriptionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ICE Subscription</label>
    <referenceTo>ICESubscription__c</referenceTo>
    <relationshipLabel>ICE Users</relationshipLabel>
    <relationshipName>ICE_Users</relationshipName>
    <type>Lookup</type>
</CustomField>