force-app/main/default/objects/ICEUser__c/fields/isCorporateAdmin__c.field-meta.xml
<CustomField>
    <fullName>isCorporateAdmin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Corporate Admin</label>
    <type>Checkbox</type>
</CustomField>