force-app/main/default/objects/ICEUser__c/fields/isPropertyAdmin__c.field-meta.xml
<CustomField>
    <fullName>isPropertyAdmin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Property Admin</label>
    <type>Checkbox</type>
</CustomField>