force-app/main/default/objects/ICEUser__c/fields/LoginName__c.field-meta.xml
<CustomField>
    <fullName>LoginName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Login Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>