force-app/main/default/objects/ICEUser__c/fields/SubscriptionID__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionID__c</fullName>
    <label>Subscription ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>