force-app/main/default/objects/ICEUser__c/fields/UserID__c.field-meta.xml
<CustomField>
    <fullName>UserID__c</fullName>
    <externalId>true</externalId>
    <label>Delphi.Net User ID</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>