force-app/main/default/objects/ICEUser__c/fields/UserName__c.field-meta.xml
<CustomField>
    <fullName>UserName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Delphi.Net User Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>