force-app/main/default/objects/ICEUser__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>UserName__c</columns>
    <columns>DelphiNetIsActive__c</columns>
    <columns>ICEPropertyId__c</columns>
    <columns>ICESubscriptionId__c</columns>
    <columns>HideOnICEForms__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>